<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:ignore="MissingTranslation">Jockey</string>
    <string name="widget_square_name">Jockey Artwork</string>
    <string name="widget_wide_name">Jockey Wide</string>
    <string name="widget_compact_name">Jockey Compact</string>
    <string name="header_playlists">Playlists</string>
    <string name="header_songs">Songs</string>
    <string name="header_artists">Artists</string>
    <string name="header_albums">Albums</string>
    <string name="header_genres">Genres</string>
    <string name="header_now_playing">Now Playing</string>
    <string name="header_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="header_settings">Settings</string>
    <string name="header_search">Search</string>
    <string name="header_all_music">Library</string>
    <string name="header_browser">Browse</string>
    <string name="header_recently_added">Recently Added</string>
    <string name="header_all_songs">All Songs</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_auto">Smart Playlist</string>
    <string name="header_create_playlist">Create playlist</string>
    <string name="header_add_queue_to_playlist">Add queue to playlist</string>
    <string name="playlist_auto_new">New Smart Playlist</string>
    <string name="playlist_auto_choose_by">Choose songs by</string>
    <string name="first_launch_title">Welcome to Jockey</string>
    <string name="first_launch_detail"><![CDATA[By using this application, you agree to Jockey\'s
        <a href="https://www.marverenic.com/Jockey/privacy-policy.html">privacy policy</a>.]]>
    </string>
    <string name="alert_privacy_policy_updated">Jockey\'s privacy policy has changed</string>
    <string name="action_read_privacy_policy">Open</string>
    <string name="url_privacy_policy">https://www.marverenic.com/Jockey/privacy-policy.html</string>
    <string name="format_time" translatable="false">%1$s:%2$s</string>
    <string name="format_time_hours" translatable="false">%1$s:%2$s:%3$s</string>
    <string name="format_compact_song_info" translatable="false">%1$s – %2$s</string>
    <string name="action_refresh">Refresh Library</string>
    <string name="action_export_playlist">Save queue as playlist&#8230;</string>
    <string name="action_set_sleep_timer">Sleep Timer&#8230;</string>
    <string name="action_sort">Sort&#8230;</string>
    <string name="action_sort_random">Randomize</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_sort_artist">Sort by artist</string>
    <string name="action_sort_album">Sort by album</string>
    <string name="action_sort_play">Sort by play count</string>
    <string name="action_sort_skip">Sort by skip count</string>
    <string name="action_sort_date_added">Sort by date added</string>
    <string name="action_sort_date_played">Sort by date played</string>
    <string name="action_disable_shuffle">Disable shuffle</string>
    <string name="action_enable_shuffle">Enable shuffle</string>
    <string name="action_enable_repeat">Enable repeat</string>
    <string name="action_disable_sleep_timer">Disable Sleep Timer</string>
    <string name="action_add_queue_to_playlist">Add queue to playlist&#8230;</string>
    <string name="action_clear_queue">Clear queue</string>
    <string name="action_done">Done</string>
    <string name="action_select">Select</string>
    <string name="action_navigate_up">Go up</string>
    <string name="action_include">Include folder</string>
    <string name="action_exclude">Exclude folder</string>
    <string name="action_remove">Remove</string>
    <string name="action_queue_next">Queue next</string>
    <string name="action_queue_last">Queue last</string>
    <string name="action_navigate_menu">Navigate to&#8230;</string>
    <string name="action_navigate_to_artist">Go to artist</string>
    <string name="action_navigate_to_album">Go to album</string>
    <string name="action_navigate_to_folder">Show in folder</string>
    <string name="action_add_to_playlist">Add to playlist&#8230;</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_smart_playlist">Edit&#8230;</string>
    <string name="action_skip">Skip</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_undo">Undo</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_add_new">Add new</string>
    <string name="action_agree">Agree</string>
    <string name="action_try_again">Try again</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_make_new_playlist">Make new playlist&#8230;</string>
    <string name="action_add_rule">Add rule</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_discard_changes">Discard changes</string>
    <string name="action_edit_playlist_rules">Edit filters</string>
    <string name="action_open_in_last_fm" translatable="false">Last.fm</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_repeat_none">Repeat none</string>
    <string name="action_repeat_one">Repeat one</string>
    <string name="action_repeat_all">Repeat all</string>
    <string name="action_repeat_multi">Multi-Repeat&#8230;</string>
    <string name="confirm_disable_shuffle">Disabled shuffle</string>
    <string name="confirm_enable_shuffle">Enabled shuffle</string>
    <string name="confirm_disable_repeat">Disabled repeat</string>
    <string name="confirm_enable_repeat">Enabled repeat</string>
    <string name="confirm_enable_multi_repeat">Enabled Multi-Repeat %d</string>
    <string name="confirm_enable_repeat_one">Enabled repeat one</string>
    <string name="confirm_disable_sleep_timer">Disabled Sleep Timer</string>
    <string name="confirm_refresh_library">Library refreshed</string>
    <string name="confirm_clear_queue">Cleared queue</string>
    <string name="confirm_removed_rule">Removed rule</string>
    <string name="confirm_application_exit">Press back again to exit</string>
    <string name="prompt_save_changes">Save changes?</string>
    <string name="prompt_discard_changes">Discard changes?</string>
    <string name="message_play_error_not_found">Jockey couldn\'t find &#8220;%1$s&#8221;</string>
    <string name="message_play_error_io_exception">&#8220;%1$s&#8221; couldn\'t be played</string>
    <string name="error_hint_duplicate_playlist">Enter a unique playlist name</string>
    <string name="error_hint_empty_playlist">Enter a playlist name</string>
    <string name="error_playback_from_files_failed">Jockey couldn\'t play %s</string>
    <string name="message_added_song">Added &#8220;%1$s&#8221; to &#8220;%2$s&#8221;</string>
    <string name="message_created_playlist">Created playlist &#8220;%1$s&#8221;</string>
    <string name="message_removed_playlist">Deleted playlist &#8220;%1$s&#8221;</string>
    <string name="message_removed_song">Removed song &#8220;%1$s&#8221;</string>
    <string name="message_sorted_playlist_random">Randomized &#8220;%1$s&#8221;</string>
    <string name="message_sorted_playlist_name">Sorted &#8220;%1$s&#8221; by name</string>
    <string name="message_sorted_playlist_artist">Sorted &#8220;%1$s&#8221; by artist name</string>
    <string name="message_sorted_playlist_album">Sorted &#8220;%1$s&#8221; by album name</string>
    <string name="message_sorted_playlist_play">Sorted &#8220;%1$s&#8221; by play count</string>
    <string name="message_sorted_playlist_skip">Sorted &#8220;%1$s&#8221; by skip count</string>
    <string name="message_sorted_playlist_date_added">Sorted &#8220;%1$s&#8221; by date added</string>
    <string name="message_sorted_playlist_date_played">Sorted &#8220;%1$s&#8221; by date played</string>
    <string name="header_add_song_name_to_playlist">Add &#8220;%1$s&#8221; to playlist</string>
    <string name="confirm_add_songs">Added %1$d songs to playlist &#8220;%2$s&#8221;</string>
    <string name="playlist_confirm_duplicate">&#8220;%1$s&#8221; already contains &#8220;%2$s&#8221;.
        Do you want to add it again?</string>
    <string name="playlist_confirm_all_duplicates">This playlist already contains all of these
        songs. Adding them again will result in %d duplicated entries.</string>
    <string name="confirm_dir_include_excluded">
        &#8220;%1$s&#8221; is already being excluded.
        Do you want to move it to your included folders?
    </string>
    <string name="confirm_dir_exclude_included">
        &#8220;%1$s&#8221; is already being included.
        Do you want to move it to your excluded folders?
    </string>
    <string name="confirm_dir_already_excluded">
        &#8220;%1$s&#8221; is already being excluded
    </string>
    <string name="confirm_dir_already_included">
        &#8220;%1$s&#8221; is already being included
    </string>
    <string name="message_removed_directory">Removed folder &#8220;%1$s&#8221;</string>
    <string name="nothing_playing">Nothing is playing</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown">Unknown</string>
    <string name="empty_no_permission">Jockey needs permission to read your music library</string>
    <string name="empty_no_permission_detail">To show your music, grant Jockey access to storage</string>
    <string name="error_no_permission_dirs">To exclude folders, grant Jockey access to storage</string>
    <string name="empty">Couldn\'t find any music here</string>
    <string name="empty_detail">You can sync songs from your computer or download them from the Internet</string>
    <string name="settings_category_general">General</string>
    <string name="appearance_header">Appearance</string>
    <string name="pref_category_library">Library</string>
    <string name="playback_header">Playback</string>
    <string name="default_page_pref">Default Page</string>
    <string name="theme_primary">Primary Color</string>
    <string name="theme_base">Background Color</string>
    <string name="add_shortcut">Update launcher icon color</string>
    <string name="switch_to_now_playing">Open Now Playing</string>
    <string name="switch_to_now_playing_detail_on">When a new song is chosen, the Now Playing page will be opened</string>
    <string name="switch_to_now_playing_detail_off">Changing songs won\'t navigate to another page</string>
    <string name="use_mobile">Use mobile data</string>
    <string name="use_mobile_description_on">Album artwork and other data will always be downloaded</string>
    <string name="use_mobile_description_off">Album artwork and other data will only be downloaded on Wi-Fi</string>
    <string name="logging_on">Anonymous usage data and crash information will be sent to Marverenic</string>
    <string name="logging_off">Only anonymous crash information will be sent to Marverenic</string>
    <string name="logging_description">Help improve Jockey</string>
    <string name="pref_directory_include">Include folders</string>
    <string name="pref_directory_exclude">Exclude folders</string>
    <string name="pref_equalizer">Equalizer</string>
    <string name="gesture_description">Enable now playing gestures</string>
    <string name="gesture_detail">Swipe across the album art to skip songs,
        or tap to play/pause music</string>
    <string name="button_play_description">Play Button</string>
    <string name="button_previous_description">Previous Song Button</string>
    <string name="button_skip_description">Next Song Button</string>
    <string name="description_album_art">Album Art</string>
</resources>