<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategoryCompat android:title="@string/appearance_header">
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/default_page_pref"
            android:entries="@array/pages"
            android:entryValues="@array/page_values"
            android:key="prefDefaultPage"
            android:title="Default Page" />
        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="@string/theme_primary"
            android:entries="@array/colors"
            android:entryValues="@array/color_values"
            android:key="prefColorPrimary"
            android:summary="@string/theme_primary_description"
            android:title="Primary Color" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/theme_base"
            android:entries="@array/themes"
            android:entryValues="@array/theme_values"
            android:key="prefBaseTheme"
            android:summary="@string/theme_base_description"
            android:title="Theme" />
        <Preference
            android:defaultValue="false"
            android:key="prefAddShortcut"
            android:title="@string/add_shortcut" />
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/pref_category_library">
        <Preference
            android:title="@string/pref_directory_include"
            android:key="prefIncludedDirs"
            android:fragment="com.marverenic.music.fragments.DirectoryListFragment"/>
        <Preference
            android:title="@string/pref_directory_exclude"
            android:key="prefExcludedDirs"
            android:fragment="com.marverenic.music.fragments.DirectoryListFragment"/>
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/settings_category_general">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="prefUseMobileData"
            android:summaryOn="@string/use_mobile_description_on"
            android:summaryOff="@string/use_mobile_description_off"
            android:title="@string/use_mobile"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefAllowLogging"
            android:summaryOn="@string/logging_on"
            android:summaryOff="@string/logging_off"
            android:title="@string/logging_description"/>
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/playback_header">
        <Preference
            android:title="@string/pref_equalizer"
            android:fragment="com.marverenic.music.fragments.EqualizerFragment"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSwitchToNowPlaying"
            android:title="@string/switch_to_now_playing"
            android:summaryOn="@string/switch_to_now_playing_detail_on"
            android:summaryOff="@string/switch_to_now_playing_detail_off"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefEnableNowPlayingGestures"
            android:title="@string/gesture_description"
            android:summary="@string/gesture_detail"/>
    </PreferenceCategoryCompat>

</PreferenceScreen>