<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_shuffle_24dp"
        android:title="@string/action_enable_shuffle"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_repeat"
        android:icon="@drawable/ic_repeat_24dp"
        android:title="@string/action_enable_repeat"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_set_sleep_timer"
        android:title="@string/action_set_sleep_timer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/save"
        android:title="@string/action_export_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/action_add_queue_to_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_queue"
        android:title="@string/action_clear_queue"
        app:showAsAction="never" />

</menu>