<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/library_drawer_browse">

        <item android:id="@+id/menu_library_home"
            android:title="@string/header_all_music"
            android:icon="@drawable/ic_library_music_24dp"/>

        <item android:id="@+id/menu_library_browse"
            android:title="@string/header_browser"
            android:icon="@drawable/ic_folder_24dp"/>

        <item android:id="@+id/menu_library_recently_added"
            android:title="@string/header_recently_added"
            android:icon="@drawable/ic_new_24dp"/>

    </group>

    <group android:id="@+id/menu_library_misc">

        <item
            android:id="@+id/menu_library_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings_24dp"/>

        <item
            android:id="@+id/menu_library_about"
            android:title="@string/header_about"
            android:icon="@drawable/ic_info_24dp"/>

    </group>

</menu>