<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/miniplayer"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/now_playing_ticker_height"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageArtwork"
        android:layout_width="@dimen/now_playing_ticker_height"
        android:layout_height="@dimen/now_playing_ticker_height"
        android:background="@android:color/black"
        android:contentDescription="@string/description_album_art"
        android:src="@drawable/art_default" />

    <ImageButton
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_skip_next_36dp"
        android:tint="?textColorPrimary"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/button_skip_description"
        android:onClick="onClick" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/skipButton"
        android:layout_toStartOf="@id/skipButton"
        android:src="@drawable/ic_play_arrow_36dp"
        android:tint="?textColorPrimary"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/button_play_description"
        android:onClick="onClick" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_toRightOf="@id/imageArtwork"
        android:layout_toEndOf="@+id/imageArtwork"
        android:layout_toLeftOf="@id/playButton"
        android:layout_toStartOf="@+id/playButton">

        <TextView
            android:id="@+id/textNowPlayingTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/nothing_playing"
            android:textSize="@dimen/list_text_header_size"
            android:theme="@style/listTitleText" />

        <TextView
            android:id="@+id/textNowPlayingDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/no_artist"
            android:textSize="@dimen/list_text_detail_size"
            android:theme="@style/listDetailText" />

    </LinearLayout>

</RelativeLayout>