<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/now_playing_max_control_width"
    android:layout_height="@dimen/now_playing_button_size"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_previous_description"
            android:src="@drawable/ic_skip_previous_36dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_centerInParent="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_play_description"
            android:src="@drawable/ic_play_arrow_36dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_skip_description"
            android:src="@drawable/ic_skip_next_36dp" />
    </RelativeLayout>

</LinearLayout>