<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@android:color/transparent"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="@dimen/now_playing_control_end_weight"
        tools:ignore="UselessLeaf"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/widget_previous"
            style="?android:borderlessButtonStyle"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/button_previous_description"
            android:src="@drawable/ic_skip_previous_36dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/widget_play_pause"
            style="?android:borderlessButtonStyle"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/button_play_description"
            android:src="@drawable/ic_play_arrow_36dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/now_playing_button_size"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/widget_next"
            style="?android:borderlessButtonStyle"
            android:layout_width="@dimen/now_playing_button_size"
            android:layout_height="@dimen/now_playing_button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/button_skip_description"
            android:src="@drawable/ic_skip_next_36dp"/>
    </RelativeLayout>

    <FrameLayout android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="@dimen/now_playing_control_end_weight"
        tools:ignore="UselessLeaf"/>

</LinearLayout>